// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image constructor call with format \`makeswift::controls::image::format::url\` returns versioned definition 1`] = `
Image {
  "config": {
    "format": "makeswift::controls::image::format::url",
    "label": "Image",
  },
  "version": 1,
}
`;

exports[`Image constructor call with format \`makeswift::controls::image::format::with-dimensions\` returns versioned definition 1`] = `
Image {
  "config": {
    "format": "makeswift::controls::image::format::with-dimensions",
    "label": "Image",
  },
  "version": 1,
}
`;

exports[`Image constructor call with format \`undefined\` returns versioned definition 1`] = `
Image {
  "config": {
    "format": undefined,
    "label": "Image",
  },
  "version": 1,
}
`;

exports[`Image copyData \`fromData\` on v0 data will promote to v1 data 1`] = `"fake-file-id"`;

exports[`Image definition w/ config {"label":"Image"} toData returns v1 data for \`{
  type: 'external-file',
  url: 'https://example.com/image.jpg',
  version: 1
}\` when definition version is 1 1`] = `
{
  "type": "external-file",
  "url": "https://example.com/image.jpg",
  "version": 1,
}
`;

exports[`Image definition w/ config {"label":"Image"} toData returns v1 data for \`{
  type: 'external-file',
  url: 'https://example.com/image.jpg',
  version: 1,
  width: 100,
  height: 100
}\` when definition version is 1 1`] = `
{
  "height": 100,
  "type": "external-file",
  "url": "https://example.com/image.jpg",
  "version": 1,
  "width": 100,
}
`;

exports[`Image definition w/ config {"label":"Image"} toData returns v1 data for \`{ type: 'makeswift-file', version: 1, id: 'fake-file-id' }\` when definition version is 1 1`] = `
{
  "id": "fake-file-id",
  "type": "makeswift-file",
  "version": 1,
}
`;
